syntax = "proto3";

package chef.automate.api.telemetry;
option go_package = "github.com/chef/automate/components/automate-gateway/api/telemetry";

import "google/api/annotations.proto";

import "external/annotations/iam/annotations.proto";

service Telemetry {
  rpc GetTelemetryConfiguration (TelemetryRequest) returns (TelemetryResponse) {
    option (google.api.http).get = "/api/v0/telemetry/config";
    option (chef.automate.api.iam.policy).resource = "system:config";
    option (chef.automate.api.iam.policy).action = "system:telemetryConfig:get";
  };
};

message TelemetryRequest {}

message TelemetryResponse {
  string license_id = 1;
  string customer_name = 4;
  string customer_id = 5;
  string license_type = 6;
  bool telemetry_enabled = 7;
  string telemetry_url = 8;
  int64 max_nodes = 9;
  string deployment_id = 10;
}
